# zld

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  a.sh  all_cmd  asdf  bigger.txt  bigger3.txt  cmd.sh  cmd2.sh  cmd3.sh  diff  err  err2  err3  filelist_cmd  firefox_build.REMOVED.git-id  l.rb  moz.sh  signal.sh  tests  xul.sh  zld  zz
tapi/: .arcconfig  CMakeLists.txt  LICENSE.TXT  Readme.md
tapi/cmake/caches/: apple-tapi-R.cmake  apple-tapi-RA-sanitized.cmake  apple-tapi.cmake  tapi-debug.cmake  tapi-defaults.cmake  tapi-dev.cmake
tapi/docs/: CMakeLists.txt  TBD.rst  conf.py  doxygen.cfg.in  index.rst
tapi/docs/man/: CMakeLists.txt  tapi-installapi.1
tapi/include/: CMakeLists.txt
tapi/include/tapi/: APIVersion.h  CMakeLists.txt  LinkerInterfaceFile.h  PackedVersion32.h  Symbol.h  Version.h  Version.inc  Version.inc.in  tapi.h
tapi/include/tapi/APIVerifier/: APIVerifier.h
tapi/include/tapi/Config/: Version.h
tapi/include/tapi/Core/: API.h  APICommon.h  APIJSONSerializer.h  APIPrinter.h  APIVisitor.h  Architecture.def  Architecture.h  ArchitectureSet.h  AvailabilityInfo.h  Context.h  FileListReader.h  FileManager.h  FileSystem.h  Framework.h  HeaderFile.h  InterfaceFile.h  InterfaceFileManager.h  MachODylibReader.h  MachOReader.h  PackedVersion.h  Path.h  Platform.h  ReexportFileWriter.h  Registry.h  TapiError.h  Target.h  TextStub.h  TextStubCommon.h  Utils.h  XPI.h  XPISet.h  YAMLReaderWriter.h
tapi/include/tapi/Diagnostics/: CMakeLists.txt  DiagnosticTAPIKinds.td  Diagnostics.h
tapi/include/tapi/Driver/: CMakeLists.txt  Configuration.h  ConfigurationFile.h  DirectoryScanner.h  Driver.h  DriverOptions.h  DriverUtils.h  Glob.h  HeaderGlob.h  Options.h  Snapshot.h  SnapshotFileSystem.h  StatRecorder.h  TAPIOptions.td
tapi/include/tapi/Frontend/: Frontend.h  FrontendContext.h
tapi/lib/: CMakeLists.txt
tapi/lib/Config/: CMakeLists.txt  Version.cpp
tapi/lib/ConfigurationFiles/: CMakeLists.txt  EquivalentTypes.conf  iOS.conf  macOS.conf  watchOS.conf
tapi/lib/ConfigurationFiles/APIVerifier/: marzipan.conf
tapi/lib/ConfigurationFiles/legacy/: MacOS10.12.Public.conf  iPhoneOS13.0.Public.conf  iPhoneOS9.0.Internal.conf
tapi/lib/Core/: API.cpp  APIJSONSerializer.cpp  APIPrinter.cpp  APIVisitor.cpp  Architecture.cpp  ArchitectureSet.cpp  AvailabilityInfo.cpp  CMakeLists.txt  FakeSymbols.cpp  FileListReader.cpp  FileManager.cpp  FileSystem.cpp  Framework.cpp  HeaderFile.cpp  InterfaceFile.cpp  InterfaceFileManager.cpp  MachODylibReader.cpp  MachOReader.cpp  PackedVersion.cpp  Path.cpp  Platform.cpp  ReexportFileWriter.cpp  Registry.cpp  TapiError.cpp  Target.cpp  TextStub.cpp  TextStubCommon.cpp  TextStubv4.cpp  Utils.cpp  XPI.cpp  XPISet.cpp  YAMLReaderWriter.cpp
tapi/lib/Diagnostics/: CMakeLists.txt  Diagnostics.cpp
tapi/lib/Driver/: API2XPIConverter.cpp  API2XPIConverter.h  ArchiveDriver.cpp  CMakeLists.txt  Configuration.cpp  ConfigurationFileReader.cpp  ConfigurationFileReader.h  DirectoryScanner.cpp  Driver.cpp  DriverOptions.cpp  DriverUtils.cpp  GenerateAPITestsDriver.cpp  Glob.cpp  HeaderGlob.cpp  InstallAPIDriver.cpp  Options.cpp  ReexportDriver.cpp  Snapshot.cpp  SnapshotFileSystem.cpp  StubDriver.cpp
tapi/lib/Frontend/: APIVisitor.cpp  APIVisitor.h  CMakeLists.txt  Frontend.cpp  FrontendContext.cpp
tapi/lib/NoInits/: CMakeLists.txt  CrashRecoveryContext.cpp  Debug.cpp  ErrorHandling.cpp  Signals.cpp  WithColor.cpp
tapi/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tapi/test/APIVerifier/Diagnostics/: availability.m  diag.m  (+3 more)
tapi/test/Archive/: extract.test  extract_v3.test  merge.test  merge_v3.test  remove.test  remove2.test
tapi/test/Binary/: fat.test  simple.test  swift.test  zippered.test  zippered_multi.test
tapi/test/Driver/: help.test  snapshot.test
tapi/test/Frontend/: verbose.c
tapi/test/Inputs/: CMakeLists.txt  iosmac.tbd  swift1.ll  swift2.ll  swift3.ll  swift4.ll  swift5.ll  swift99.ll  unsupported_macho_header.yaml  zippered.tbd
tapi/test/InstallAPI/: alias_list.test  asm.test  auto_zipper.test  availability.test  code_coverage.test  commandline.test  cpp1.test  cpp2.test  cpp3.test  cpp4.test  directory_iterator.test  dylib.test  dylib_fail.test  fragile_objc_abi.test  iosmac.test  ivar.test  ivar_extension.test  module.test  module2.test  project.test  simple.test  special_linker_symbols.test  swift.test  tapi_define.test  target_variant.test  umbrella1.test  umbrella2.test  umbrella3.test  umbrella_code_coverage.test  umbrella_option.test  version.test  zippered.test  zippered_profile.test  zippered_verify.test
tapi/test/Outputs/: Version.tbd  Version2.tbd
tapi/test/Reexport/: simple.test
tapi/test/Stubify/: bundle.test  inline_iosmac.test  inline_zippered.test  inlining.test  inlining_v3.test  installapi_flag.test  installname.test  reexported_symbols.test  rename.test  simple.test  swift_version.test  symlink.test  unknown_architecture.test  unknown_platform.test
tapi/test/Unit/: lit.cfg.py  lit.site.cfg.py.in
tapi/test/tapi-run/: tapi-run.test
tapi/tools/: CMakeLists.txt
tapi/tools/libtapi/: APIVersion.cpp  CMakeLists.txt  LinkerInterfaceFile.cpp  Version.cpp  libtapi.exports
tapi/tools/tapi/: CMakeLists.txt  tapi.cpp
tapi/tools/tapi-api-verifier/: CMakeLists.txt  tapi-api-verifier.cpp
tapi/tools/tapi-binary-reader/: CMakeLists.txt  tapi-binary-reader.cpp
tapi/tools/tapi-frontend/: CMakeLists.txt  tapi-frontend.cpp
tapi/tools/tapi-import/: CMakeLists.txt  tapi-import.cpp
tapi/tools/tapi-run/: CMakeLists.txt  tapi-run.cpp
tapi/unittests/: CMakeLists.txt
tapi/unittests/JSON/: CMakeLists.txt  JSONSerializer.cpp
tapi/unittests/TapiCore/: CMakeLists.txt  FileListReader.cpp  FileSystem.cpp  Path.cpp  Reader.cpp  Utils.cpp
tapi/unittests/TapiDriver/: CMakeLists.txt  HeaderGlob.cpp
tapi/unittests/TapiVerifier/: CMakeLists.txt  YAMLConfig.cpp
tapi/unittests/libtapi/: APIVersionTest.cpp  CMakeLists.txt  LinkerInterfaceFileTest_TBD_v1.cpp  LinkerInterfaceFileTest_TBD_v2.cpp  LinkerInterfaceFileTest_TBD_v3.cpp  LinkerInterfaceFileTest_TBD_v4.cpp  VersionTest.cpp
(+1469 files in other folders)
